# APKRunner

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
apps/desktop/src/main/: appData.ts  index.ts  ipc.ts  native.ts  runtimeService.ts  window.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  main.tsx  styles.css
apps/desktop/src/renderer/src/components/glass/: GlassPrimitives.tsx  GlassProvider.tsx
apps/desktop/src/renderer/src/state/: appState.ts
apps/desktop/src/shared/: ipcChannels.ts  protocol.ts
crates/apkrunner-core/: Cargo.toml
crates/apkrunner-core/examples/: aosp_smoke.rs
crates/apkrunner-core/src/: android_host.rs  apk.rs  axml.rs  dex.rs  error.rs  event.rs  frame.rs  input.rs  lib.rs  permissions.rs  runner.rs  runtime.rs  runtime_bundle.rs  runtime_installer.rs  vfs.rs
crates/apkrunner-core/src/backends/: aosp.rs  mod.rs
crates/apkrunner-napi/: Cargo.toml
crates/apkrunner-napi/src/: lib.rs
docs/: apk-loader.md  architecture.md  limitations.md  roadmap.md  runtime-backends.md
fixtures/: README.md
tools/: README.md  check-renderer-imports.mjs  copy-native-artifact.mjs  install-electron.mjs  run-electron-vite-dev.mjs
