[workspace]
resolver = "2"
members = [
  "crates/apkrunner-core",
  "crates/apkrunner-napi"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["APKRunner Contributors"]
repository = "https://example.invalid/apkrunner"

[workspace.dependencies]
base64 = "0.22"
bitflags = "2"
byteorder = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
napi = { version = "3", features = ["serde-json"] }
napi-derive = "3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
