[package]
name = "apkrunner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
byteorder.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile = "3"
